# top-apps

./: .gitignore  .top-repo2.conf  LICENSE  Makefile  PushoverId.gpg  README.md  cabal.project  default.nix  flat.nix  model.nix  quid2-net-apps.cabal  repo.yaml  stack.yaml  stack710.yaml  stack801.yaml  stack802.yaml  stack821.yaml  test-vip.yaml  test.yaml  top-apps.cabal  top-apps.nix  top.nix  typed.nix
app/: App.hs  LoadRepo.hs  README.lhs  Repo.hs  Sensor.hs  Test.hs  Util.hs  adtrepo.hs  hello.hs  meta.hs  signed.hs  store.hs  test.hs  testApp.hs  toptest.hs  typed.hs
app/Chat/: Model.hs  chat-history.hs  chat.hs
app/Sensor/: Model.hs  Model1.hs  sensor-check.hs  sensor-check0.hs  sensor-check1.hs  sensor.hs  sensor0.hs  sensor1.hs  sensors.hs  temperature.hs  time.hs
app/Test/: GPG.hs  Types.hs  WWW.hs
app/beat/: beat.cabal  beat.hs  hap.yaml  stack.yaml
app/host/: giga.yaml  hap.yaml  host.cabal  host.hs  stack.yaml
app/monitor/: Makefile  hap.yaml  monitor.cabal  monitor.hs  stack.yaml
src/: App.hs  Ekg.hs  NetLog.hs  README.lhs  Sensor.hs  Test.hs  Util.hs
src/App/: Types.hs
src/Data/Time/: Util.hs
src/Model/: Report.hs  StoreProtocol.hs  Validate.hs
src/Model/Report/: Util.hs
src/Network/Wai/Middleware/: StaticHost.hs
src/Quid2/Util/: Dir.hs  Service.hs  String.hs  Time.hs
src/Stats/: App.hs  Host.hs
src/System/Remote/Monitoring/: Top.hs
src/Test/: GPG.hs  OVH.hs  Types.hs  WWW.hs
test/: DocSpec.hs
