name:                quid2-net-apps
version:             0.1
synopsis:            Example applications for quid2-net
description:         Please see README.md
homepage:            http://github.com/tittoassini/quid2-net-apps
license:             BSD3
license-file:        LICENSE
author:              Pasqualino `Titto` Assini
maintainer:          tittoassini@gmail.com
copyright:           Copyright: (c) 2016 Pasqualino `Titto` Assini
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable quid2-hello
  hs-source-dirs:      app
  main-is:             hello.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,transformers,typed,quid2-net
  default-language:    Haskell2010

executable quid2-chat
  hs-source-dirs:      app
  main-is:             Chat/chat.hs
  other-modules:       Chat.Model,Chat.Util
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,transformers,async,pipes,typed,quid2-net
  default-language:    Haskell2010

executable quid2-chat-history
  hs-source-dirs:      app
  main-is:             Chat/chat-history.hs
  other-modules:       Chat.Model
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,transformers,pipes,typed,quid2-net
  default-language:    Haskell2010

executable quid2-signed
  hs-source-dirs:      app
  main-is:             signed.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,transformers,bytestring,ed25519,typed,quid2-net
  default-language:    Haskell2010

executable quid2-sensor
  hs-source-dirs:      app
  main-is:             Sensor/sensor1.hs
  other-modules:       Sensor.Model1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,typed,quid2-net
  default-language:    Haskell2010

executable quid2-sensor-check
  hs-source-dirs:      app
  main-is:             Sensor/sensor-check1.hs
  other-modules:       Sensor.Model1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,typed,quid2-net
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tittoassini/quid2-net-apps
