cabal-version:      >=1.10
name:               top-apps
version:            0.1.13
license:            BSD3
license-file:       LICENSE
copyright:          Copyright: (c) 2016-2024 Pasqualino `Titto` Assini
maintainer:         tittoassini@gmail.com
author:             Pasqualino `Titto` Assini
tested-with:        GHC ==7.10.3 || ==8.0.2 || ==8.2.2
homepage:           http://github.com/Quid2/top-apps
synopsis:
  Example applications for <http://github.com/Quid2/top top>, the typed oriented protocol.

description:        See the <http://github.com/Quid2/top-apps online tutorial>.
category:           Network, Cloud, Distributed Computing
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/Quid2/top-apps

library
  exposed-modules:
    App
    -- App.Types
    Data.Time.Util
    Model.Report
    Model.Report.Util
    Model.StoreProtocol
    Quid2.Util.Dir
    -- Quid2.Util.Service
    Sensor
    Sensor.Model
    Model.Validate
    NetLog
    Test
    Test.GPG
    Test.OVH
    Test.Types
    Test.WWW
    Util

    -- Test
    -- Test.GPG
    -- Test.OVH
    -- Test.Types
    -- Test.WWW

  -- App
  -- Stats.App
  -- Stats.Host
  -- System.Remote.Monitoring.Top

  hs-source-dirs:   src app
  default-language: Haskell2010
  build-depends:
      aeson
    , ansi-terminal
    , async
    , base
    , bytestring
    , containers
    , data-default
    , deepseq
    , directory
    , disk-free-space
    , ekg-core
    , filelock
    , filepath
    , flat
    , Glob
    , hdaemonize
    , hostname
    , hslogger
    , http-conduit
    , loglevel
    , pretty-show
    , process
    , regex-tdfa
    , retry
    , rio
    , temporary
    , text
    , time
    , top
    , typed-process
    , unix
    , unordered-containers
    , utf8-string
    , turtle
    , zm

-- TODO : move this to a separate directory
-- executable top-test
--   main-is:          testApp.hs
--   hs-source-dirs:   app src
--   other-modules:

--   default-language: Haskell2010
--   ghc-options:      -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--       aeson
--     , ansi-terminal
--     , async
--     , base
--     , bytestring
--     , containers
--     , Glob
--     , hostname
--     , hslogger
--     , http-conduit
--     , pretty
--     , pretty-show
--     , retry
--     , text
--     , top
--     , top-apps
--     , typed-process
--     , utf8-string
--     , zm


-- executable qq
--     main-is: qq.hs
--     hs-source-dirs: app
--     other-modules:
--         QQ.CommandLine
--         QQ.Env
--         QQ.Eval
--         QQ.PureEval
--         QQ.Expr
--     default-language: Haskell2010
--     build-depends:
--         base -any,
--         bytestring -any,
--         containers -any,
--         filepath -any,
--         optparse-applicative >=0.12.1.0,
--         top -any,
--         top-apps -any,
--         xdg-basedir -any,
--         zm -any,
--         zm-language -any,
--         filelock -any,
--         temporary -any,
--         hint -any,
--         directory -any,
--         purescript -any,
--         aeson -any,
--         utf8-string -any,
--         text -any,
--         ansi-terminal -any,
--         Glob -any


-- executable tapp
--     main-is: App.hs
--     hs-source-dirs: app
--     -- other-modules: Util
--     default-language: Haskell2010
--     ghc-options: -threaded -rtsopts -with-rtsopts=-N
--     build-depends: base,loglevel,text,async


-- executable top-store
--     main-is: store.hs
--     hs-source-dirs: app
--     default-language: Haskell2010
--     ghc-options: -threaded -rtsopts -with-rtsopts=-N
--     build-depends:
--         base -any,
--         bytestring -any,
--         directory -any,
--         filepath -any,
--         hslogger -any,
--         pretty -any,
--         top -any,
--         top-apps -any,
--         zm -any,
--         utf8-string -any,
--         text -any,
--         ansi-terminal -any,
--         Glob -any

-- executable top-meta
--     main-is: meta.hs
--     hs-source-dirs: app
--     other-modules:
--         Chat.Model
--     default-language: Haskell2010
--     ghc-options: -threaded -rtsopts -with-rtsopts=-N
--     build-depends:
--         base -any,
--         containers -any,
--         top -any,
--         transformers -any,
--         zm -any,
--         utf8-string -any,
--         text -any,
--         ansi-terminal -any,
--         Glob -any

-- executable top-hello
--     main-is: hello.hs
--     hs-source-dirs: app
--     default-language: Haskell2010
--     ghc-options: -threaded -rtsopts -with-rtsopts=-N
--     build-depends:
--         base -any,
--         top -any,
--         transformers -any,
--         zm -any,
--         utf8-string -any,
--         text -any,
--         ansi-terminal -any,
--         Glob -any

-- executable top-chat
--     main-is: Chat/chat.hs
--     hs-source-dirs: app
--     other-modules:
--         Chat.Model
--         Chat.Util
--     default-language: Haskell2010
--     ghc-options: -threaded -rtsopts -with-rtsopts=-N
--     build-depends:
--         async -any,
--         base -any,
--         pipes -any,
--         top -any,
--         transformers -any,
--         zm -any,
--         utf8-string -any,
--         text -any,
--         ansi-terminal -any,
--         Glob -any

-- executable top-chat-history
--     main-is: Chat/chat-history.hs
--     hs-source-dirs: app
--     other-modules:
--         Chat.Model
--     default-language: Haskell2010
--     ghc-options: -threaded -rtsopts -with-rtsopts=-N
--     build-depends:
--         base -any,
--         pipes -any,
--         top -any,
--         transformers -any,
--         zm -any,
--         utf8-string -any,
--         text -any,
--         ansi-terminal -any,
--         Glob -any

-- executable top-signed
--     main-is: signed.hs
--     hs-source-dirs: app
--     default-language: Haskell2010
--     ghc-options: -threaded -rtsopts -with-rtsopts=-N
--     build-depends:
--         base -any,
--         bytestring -any,
--         ed25519 -any,
--         top -any,
--         transformers -any,
--         zm -any,
--         utf8-string -any,
--         text -any,
--         ansi-terminal -any,
--         Glob -any

-- executable top-sensor1
--     main-is: Sensor/sensor1.hs
--     hs-source-dirs: app
--     other-modules:
--         Sensor.Model1
--     default-language: Haskell2010
--     ghc-options: -threaded -rtsopts -with-rtsopts=-N
--     build-depends:
--         base -any,
--         top -any,
--         zm -any,
--         utf8-string -any,
--         text -any,
--         ansi-terminal -any,
--         Glob -any

-- executable top-sensor-check
--     main-is: Sensor/sensor-check1.hs
--     hs-source-dirs: app
--     other-modules:
--         Sensor.Model1
--     default-language: Haskell2010
--     ghc-options: -threaded -rtsopts -with-rtsopts=-N
--     build-depends:
--         base -any,
--         top -any,
--         zm -any,
--         utf8-string -any,
--         text -any,
--         ansi-terminal -any,
--         Glob -any

-- executable top-temperature
--     main-is: Sensor/temperature.hs
--     hs-source-dirs: app
--     other-modules:
--         Sensor.Model
--         Sensor
--         App
--     default-language: Haskell2010
--     ghc-options: -threaded -rtsopts -with-rtsopts=-N
--     build-depends:
--         base -any,
--         extra -any,
--         hostname -any,
--         process -any,
--         regex-tdfa -any,
--         time -any,
--         top -any,
--         top-apps -any,
--         zm -any,
--         utf8-string -any,
--         text -any,
--         ansi-terminal -any,
--         Glob -any

-- executable top-time
--     main-is: Sensor/time.hs
--     hs-source-dirs: app
--     other-modules:
--         Sensor
--         Sensor.Model
--         AppService
--     default-language: Haskell2010
--     ghc-options: -threaded -rtsopts -with-rtsopts=-N
--     build-depends:
--         base -any,
--         extra -any,
--         hostname -any,
--         process -any,
--         regex-tdfa -any,
--         time -any,
--         top -any,
--         top-apps -any,
--         zm -any,
--         utf8-string -any,
--         text -any,
--         ansi-terminal -any,
--         Glob -any

-- Tests embedded in code documentation
test-suite doc
  type:             exitcode-stdio-1.0
  main-is:          DocSpec.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:
      base
    , doctest    >=0.11.2
    , filemanip  >=0.3.6.3
