name: monitor
version: 0.1
build-type: Simple
cabal-version: >= 1.10

executable top-monitor
    main-is: monitor.hs
    hs-source-dirs: .
    other-modules:
    default-language: Haskell2010
    build-depends:
        base -any,
        top,
        top-apps -any,
        rio,
        ekg-core,
        extra,
        pipes,
        text

    ghc-options: -with-rtsopts=-T